2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gdb/i386/machdep.S: Use VARIABLE and EXT_C instead of
	hardcoding the relevant info.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/argp-fmtstream.c (__argp_get_display_len): Add
	missing const qualifiers.
	* grub-core/gnulib/argp-fmtstream.h (__argp_get_display_len): Likewise.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c [__APPLE__]: Add missing includes.
	(grub_util_biosdisk_is_floppy): Fix usage of undefined variable.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Silence spurious warning.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/ofpath.c: Rename devname to sys_devname everywhere to
	avoid conflicts.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/grub-ofpathname.c: Add missing config.h include.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup) [!__linux__]: Add missing file declaration
	and grub_file_close call.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Add LZSS Mach-O support (needed for new xnu kernelcache).

	* grub-core/Makefile.core.def (xnu): Add file lzss.c
	* grub-core/loader/lzss.c: New file.
	* grub-core/loader/xnu.c (grub_xnu_load_driver): Close binaryfile
	on Mach-O open failure.
	* grub-core/loader/macho.c (grub_macho_close): Free uncompressedXX.
	Don't free cmdsXX in uncompressedXX is set.
	(grub_macho_file): Init new fields.
	New argument is_64bit. All users updated.
	Handle compressed. Error out if no suitable architecture is found.
	Don't close file.
	(grub_macho_open): New argument is_64bit. All users updated.
	* grub-core/loader/macho32.c: Add defines for new fields.
	* grub-core/loader/macho64.c: Likewise.
	* grub-core/loader/machoXX.c (grub_macho_contains_macho): Make static.
	(grub_macho_parse): Handle compressed.
	Defer actual processing if compressed.