@@ -1,5 +1,10 @@
 2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/symbol.h (EXT_C) [!ASM_FILE]: Redefine with strings.
+	* grub-core/lib/i386/backtrace.c (grub_backtrace): Use EXT_C.
+
+2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/gdb/i386/machdep.S: Use VARIABLE and EXT_C instead of
 	hardcoding the relevant info.
 
